# credit-risk-prediction-api

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  deploy.sh  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
app/: main.py
app/static/: style.css
app/templates/: index.html
data/encoders/: appl_encoder_map.pkl
data/models/: best_xgboost.pkl  lgb1.pkl  lgb_model_v1.pkl  lgb_select_features.txt  lgb_select_features_v2.txt  voting_features.txt  xgb_select_features.txt  xgb_select_features_2.txt
notebooks/: application eda.ipynb  bureau_eda.ipynb  feature_engineering.ipynb  modeling.ipynb  prev_applications1.ipynb
src/: Dockerfile
src/utils/: app_utils.py  custom_transformers.py  eda_utils.py  modeling_utils.py  plot_utils.py
