[project]
name = "anplien-ds-v2-5-3-4-1"
version = "0.1.0"
description = "LAON RISK "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autoimpute>=0.14.1",
    "fastapi>=0.116.1",
    "feature-engine>=1.8.3",
    "jinja2>=3.1.6",
    "lightgbm>=4.6.0",
    "mrmr-selection>=0.2.8",
    "optuna>=4.4.0",
    "pandas>=2.3.1",
    "phik>=0.12.5",
    "polars>=1.31.0",
    "pyarrow>=21.0.0",
    "scikit-learn>=1.7.1",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
    "xgboost>=3.0.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.0",
]

